@@ -10,6 +10,7 @@ Jabber: Add jabber browser/disco
 Fix bind socket for direct connection
 Fix save history on win32
 Add option "Ignore this phrase" in context menu
+Jabber: Fix send multiline message
 
 Version 0.9.1
 ICQ: Fix login
